# vt2-optimization-datamodels

./: .gitignore  DCOPF_Investment_Comparison.md  README.md  README_investment.md  generation_results.csv  pyproject.toml  run.txt  run_scenario_analysis.py  setup_pylance.sh  test_csv_model.py
archives/: 2024-10-16_CH_Load.csv  Anderson-Exemples.py  anderson-exemple6-2.py  bus2.csv  meeting24-05.xlsx  notes.md  test.py  wind.csv  yearly_load_elec_housing.mat
change-log/: KW12_feedback.md  KW12_implementation.md  KW13_stand  workflow.md
changes/: KW12_prompt.txt
data/: optimization_results.pkl
eva-report-2/: main.aux  main.tex  main.toc  title.tex
figures/: flowchart.md  scripts-relationships.md
forecast/: config.yaml  run.py
forecast0/: forecasting_improved.ipynb  nn-forecasting.ipynb  nn-tensor.py  pv-extraction.py
forecast2/: __init__.py  __main__.py  compare.py  config.yaml  dataset.py  features.py  model.py  train.py
notebooks/: stage0.py  stage1.py  stage2.py  test.py  testA.py  testB.py  testB1.py  testB2.py  testC.py  testD.py  testD1.py  testE.py  testF.py  testG.py
report/: main 2.synctex(busy)  main.aux  main.bbl  main.blg  main.out  main.tex  main.toc  notes.tex  refs.bib  skeleton.md  title.tex
results/: annual_costs.json  implementation_plan.json  production_costs.json
results-thermal/: production_costs.json
scripts/: README.md  __init__.py  autumn_spring_result.txt  check_connections.py  check_results.py  components.py  create_master_gen.py  create_master_invest.py  create_master_load.py  data_loading.py  dcopf.py  dcopf_mip.py  demand-data-process.py  dispatch-no-storage.py  extract.py  flow-limit.py  generation-data-process.py  grid-model.py  investment.py  investment_utils.py  linear-prog.py  linear-prog2.py  linear-prog3.py  linear-prog_4nodes.py  load_data.py  loader.py  main.py  main_no_prompt.py  marginal_price_analysis.py  model.py  multi_scenario.py  network.py  optimization.py  optimization_variables_corrected.csv  optimizer.py  planning.py  (+24 more)
(+233 files in other folders)
