[tool.poetry]
name = "vt1-energy-investment-model"
version = "0.1.0"
description = "Optimization model for energy investment decisions"
authors = ["Rui Vieira <ruivieira.pro@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
numpy = "^2.1.3"
pulp = "^2.9.0"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
cplex = { path = "/Applications/CPLEX_Studio2211/cplex/python/3.10/arm64_osx/" }
python-dotenv = "^1.0.1"
openai = "^1.58.1"
seaborn = "^0.13.2"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
